--- a/main_src_ont/Makefile
+++ b/main_src_ont/Makefile
@@ -36,7 +36,7 @@ source_o		= ${source_cpp:%.cpp=%.o}
 .cpp.o:
 	${CXX} ${DEUBG_CXX} -c $< -o $@
 
-jobs = ORGC ONTGapCorrecter ONTGapFiller SplitScaffSeq SplitScaff2NamedContig ScaffInfo2Seq
+jobs = ORGC ONTGapCorrecter ONTGapFiller ONTGapDev01 SplitScaffSeq SplitScaff2NamedContig ScaffInfo2Seq
 
 all :  ${jobs}
 
@@ -70,6 +70,15 @@ ONTGapFiller : clean ${ONTGapFiller_o} ${source_o} ../bin
 
 
 
+ONTGapDev01_cpp = ONTGapDev01.cpp
+ONTGapDev01_o = ONTGapDev01.o
+ONTGapDev01 : clean ${ONTGapDev01_o} ${source_o} ../bin
+	${CXX} ${ONTGapDev01_o} ${source_o} ${DEUBG_CXX} -o ONTGapDev01
+	mv $@ ../bin/
+
+
+
+
 SplitScaffSeq_cpp = SplitScaffSeq.cpp
 SplitScaffSeq_o = SplitScaffSeq.o
 SplitScaffSeq : clean ${SplitScaffSeq_o} ${source_o} ../bin
@@ -95,7 +104,7 @@ ScaffInfo2Seq : clean ${ScaffInfo2Seq_o} ${source_o} ../bin
 	mv $@ ../bin/
 
 
-jobs_o=  ${ORGC_o} ${ONTGapCorrecter_o} ${ONTGapFiller_o} ${SplitScaffSeq_o} ${SplitScaff2NamedContig_o} ${ScaffInfo2Seq_o}
+jobs_o=  ${ORGC_o} ${ONTGapCorrecter_o} ${ONTGapFiller_o} ${ONTGapDev01_o} ${SplitScaffSeq_o} ${SplitScaff2NamedContig_o} ${ScaffInfo2Seq_o}
 
 dirty	   =${jobs_o} ${jobs} ${source_o}
 
