use awk sam filter replace c++ one

--- a/main_src_ont/Makefile
+++ b/main_src_ont/Makefile
@@ -1,4 +1,5 @@
-.PHONY: all clean bin
+.PHONY: all clean bin   samSQ_filter.awk
+
 
 CC 		   =	gcc
 CXX 	   =	g++
@@ -41,10 +42,19 @@ source_o		= ${source_cpp:%.cpp=%.o}
 .cpp.o:
 	${CXX} ${DEUBG_CXX} -c $< -o $@
 
-jobs = DiffONTPilon ORGC ONTGapCorrecter ONTGapFiller ONTGapDev01 ONTGapCandidate SplitScaffSeq SplitScaff2NamedContig ScaffInfo2Seq samSQ_filter
+jobs = DiffONTPilon ORGC ONTGapCorrecter ONTGapFiller ONTGapDev01 ONTGapCandidate SplitScaffSeq SplitScaff2NamedContig ScaffInfo2Seq
 
-all :  ${jobs}
+scripts=  samSQ_filter.awk
 
+
+all :  ${jobs} ${scripts}
+
+
+
+
+
+samSQ_filter.awk:
+	cp samSQ_filter.awk ../bin/
 
 
 
@@ -127,16 +137,7 @@ ScaffInfo2Seq : clean ${ScaffInfo2Seq_o} ${source_o} ../bin
 	mv $@ ../bin/
 
 
-
-
-samSQ_filter_cpp = samSQ_filter.cpp
-samSQ_filter_o = samSQ_filter.o
-samSQ_filter : clean ${samSQ_filter_o} ${source_o} ../bin
-	${CXX} ${samSQ_filter_o} ${source_o} ${LD_FLAGS} ${DEUBG_CXX} -o samSQ_filter
-	mv $@ ../bin/
-
-
-jobs_o=  ${DiffONTPilon_o} ${ORGC_o} ${ONTGapCorrecter_o} ${ONTGapFiller_o} ${ONTGapDev01_o} ${ONTGapCandidate_o} ${SplitScaffSeq_o} ${SplitScaff2NamedContig_o} ${ScaffInfo2Seq_o} ${samSQ_filter_o}
+jobs_o=  ${DiffONTPilon_o} ${ORGC_o} ${ONTGapCorrecter_o} ${ONTGapFiller_o} ${ONTGapDev01_o} ${ONTGapCandidate_o} ${SplitScaffSeq_o} ${SplitScaff2NamedContig_o} ${ScaffInfo2Seq_o}
 
 dirty	   =${jobs_o} ${jobs} ${source_o}
 
